# alx-backend-security

./: README.md  build.sh  pyproject.toml  render-production.yaml  render.yaml  requirements.txt  verify_anomaly.py  verify_logging.py  verify_ratelimit.py
alx_backend_security/: celery.py  settings.py  urls.py
ip_tracking/: middleware.py  models.py  tasks.py  urls.py  views.py
ip_tracking/management/commands/: block_ip.py  create_default_superuser.py
ip_tracking/migrations/: 0001_initial.py  0002_requestlog_city_requestlog_country.py  0003_blockedip.py  0004_suspiciousip.py
ip_tracking/templates/ip_tracking/: home.html
