[project]
name = "alx-backend-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-ip-geolocation>=1.6.1",
    "django-ratelimit>=4.1.0",
    "django-redis>=6.0.0",
    "drf-yasg>=1.21.14",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "whitenoise>=6.11.0",
]
